<resources>
    <string name="app_name">信鸦</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="auth_title_new">登录信鸦</string>
    <string name="auth_title_update">更新密码</string>
    <string name="auth_title_confirm">确认密码</string>
    <string name="auth_username">用户名</string>
    <string name="auth_password">密码</string>
    <string name="auth_sign_in">登录</string>
    <string name="auth_sign_up">没有账户？现在注册</string>
    <string name="auth_error_empty_username">请输入用户名</string>
    <string name="auth_error_empty_password">请输入密码</string>
    <string name="auth_error_invalid_response">服务器应答无效</string>
    <string name="auth_error_unknown">未知错误</string>

    <string name="sign_up_hint_title">加入信鸦吧!</string>
    <string name="sign_up_hint_username">用户名</string>
    <string name="sign_up_hint_email">邮箱</string>
    <string name="sign_up_hint_phone">手机号码</string>
    <string name="sign_up_hint_password">密码</string>
    <string name="sign_up_hint_password_confirm">确认密码</string>
    <string name="sign_up">注册</string>

    <string name="new_house_title">创建新的House</string>
    <string name="new_house_name">House的名字</string>
    <string name="new_house_description">简要描述</string>
    <string name="new_house_create">点击成为House的主人</string>

    <string name="menu_new_house">创建House</string>
    <string name="menu_join_house">加入House</string>
    <string name="menu_apply_management">申请管理</string>
    <string name="menu_user_profile">个人资料</string>

    <string name="image_content_checkbox"/>

    <string name="user_profile_email">邮箱</string>
    <string name="user_profile_phone">手机号码</string>
    <string name="user_profile_logout">退出登陆</string>
    <string name="error_checkout">注销失败</string>
    <string name="success_checkout">注销成功，请重新登陆</string>

    <string name="house_id">House号</string>
    <string name="house_description">简要描述</string>
    <string name="house_founder_name">创始人</string>
    <string name="house_created_time">创建时间</string>
    <string name="house_total_number">总人数</string>
    <string name="house_publicity">公开性</string>
    <string name="house_status">状态</string>
    <string name="house_look_up_members">查看圈子成员</string>
    <string name="house_exit">退出House</string>
    <string name="house_edit">编辑资料</string>
    <string name="house_serve_management">管理申请</string>
    <string name="house_exit_success">退出House成功</string>

    <string name="create_serve_title">加入私密House申请</string>
    <string name="create_serve_description">加入私密House需要Lord的许可，请添加相关描述</string>
    <string name="create_serve_hint">理由</string>
    <string name="create_serve_pre_fill">求收留</string>

    <string name="house_serve">加入</string>

    <string name="draft_title_hint">标题</string>
    <string name="draft_hint">请告诉信鸦要发送什么内容…</string>
    <string name="draft_send">发送</string>
    <string name="draft_select_member">选择用户</string>

    <string name="raven_from">来自</string>

    <string name="search_hint">请输入House号搜索</string>
    <string name="search_empty">没有找到相应的House</string>
    <string name="apply_server_success">提交申请成功</string>

    <string name="message_installation_fail">设备注册失败，无法使用信鸦服务</string>
    <string name="message_password_inconsistent">两次输入的密码不一致</string>

    <string name="navigation_drawer_open">抽屉导航栏开启</string>
    <string name="navigation_drawer_close">抽屉导航栏关闭</string>

    <string name="empty_in_ravens">你没有收到任何信鸦哦</string>
    <string name="empty_ravens">你没有送出过任何信鸦</string>
    <string name="error_loading_ravens">信鸦在途中遇到了麻烦</string>

    <string name="select_empty_houses">没有可以发送通知的House</string>
    <string name="select_empty_members">这个House没有成员哦</string>

    <string name="empty_houses">你没有加入任何一个House哦</string>
    <string name="error_loading_houses">加载Houses失败</string>
    <string name="error_loading_members">加载成员失败</string>

    <string name="chat_status">聊天状态</string>
    <string name="chat_input_hint">请输入内容</string>
    <string name="chat_input_button">发送</string>
    <string name="chat_send_error">发送失败</string>
    <string name="chat_unsupport_message_type">不支持此类消息</string>

    <string name="role_lord">阁下</string>
    <string name="role_maester">学士</string>
    <string name="role_ordinary">成员</string>

    <string name="house_public">公开</string>
    <string name="house_private">私有</string>

    <string name="send_raven_success">信鸦已将信息完全送达</string>
    <string name="send_raven_error">信鸦未能送达信息</string>

    <string name="update_house_title">修改House信息</string>
    <string name="update_house_name">House的名字</string>
    <string name="update_house_description">House的描述</string>
    <string name="update_house_save">保存</string>

    <string name="serve_ordinary">想加入您的House</string>
    <string name="serve_maester">想成为这个House的Maester</string>
    <string name="serve_accept">同意</string>
    <string name="serve_reject">丑拒</string>

    <string name="member_id">成员ID</string>
    <string name="member_chat">发消息</string>
    <string name="member_expel">踢出成员</string>

    <string name="inraven_receive">我已收到</string>
    <string name="whistle_blowing">举报</string>
    <string name="whistle_blowing_reason">举报描述</string>
    <string name="whistle_blowing_hint">广告</string>
    <string name="whisle_blowing_success">举报发送成功</string>
    <string name="whisle_blowing_fail">举报发送失败</string>

    <string name="inraven_none">信鸦不见了</string>

    <string name="select_confirm">确定</string>

    <string name="send_reply_success">回复成功</string>
    <string name="send_reply_fail">回复失败</string>

    <string name="expel_member_success">删除成员成功</string>
    <string name="expel_member_fail">删除成员失败</string>

    <string name="update_house_success">更新House成功</string>
    <string name="update_house_fail">更新House失败</string>

    <string name="load_serve_fail">加载Serves失败</string>

    <string name="serve_empty">没有要处理的申请</string>
    <string name="handle_serve_success">处理申请成功</string>
    <string name="handle_serve_fail">处理申请失败</string>
</resources>
