<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_man_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="沈斯杰" />

        <TextView
            android:id="@+id/text_template"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBaseline_toBaselineOf="@id/text_man_name"
            app:layout_constraintStart_toEndOf="@+id/text_man_name"
            tools:text="@string/serve_ordinary"/>

        <TextView
            android:id="@+id/text_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_man_name"
            app:layout_constraintTop_toBottomOf="@+id/text_man_name"
            tools:text="我是你的助教，求拉" />

        <Button
            android:id="@+id/button_accept"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/serve_accept"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textAppearance="?android:textAppearanceButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_content" />

        <Button
            android:id="@+id/button_reject"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/serve_reject"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_accept"
            app:layout_constraintTop_toBottomOf="@+id/text_content" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>